Category buttons fixed